--- a/common/Makefile
+++ b/common/Makefile
@@ -1,6 +1,5 @@
 # Makefile for 'common' module
 #
-# Will French
 # Nunchuck-Buccaneers
 # CS50-Spring 2021
 # 05/21/21
@@ -10,7 +9,7 @@ OBJS = grid.o
 LIB = common.a
 LLIBS = 
 
-CFLAGS = -Wall -pedantic -std=c11 -ggdb $(FLAGS) 
+CFLAGS = -Wall -pedantic -std=c11 -ggdb $(FLAGS)
 CC = gcc
 MAKE = make
 
@@ -19,7 +18,7 @@ $(LIB): $(OBJS)
 
 .PHONY: all clean
 
-grid.o: grid.h pos2D.h
+grid.o: grid.h pos2D.h mem.h
 
 clean:
 	rm -rf *.dSYM
