finished grid.c gridtest.c (tested grid module)

--- a/common/Makefile
+++ b/common/Makefile
@@ -5,7 +5,8 @@
 # 05/21/21
 #
 
-OBJS = grid.o
+OBJS = grid.o pos2D.o mem.o
+TESTS = gridtest.o
 LIB = common.a
 LLIBS = 
 
@@ -13,13 +14,25 @@ CFLAGS = -Wall -pedantic -std=c11 -ggdb $(FLAGS)
 CC = gcc
 MAKE = make
 
+.PHONY: all clean test
+
+all: $(LIB) gridtest
+
 $(LIB): $(OBJS)
 	ar cr $(LIB) $(OBJS)
 
-.PHONY: all clean
+gridtest: $(OBJS) $(TESTS)
+	$(CC) $(CFLAGS) $^ $(LIBS) -o $@
 
 grid.o: grid.h pos2D.h mem.h
+pos2D.o: pos2D.h
+mem.o: mem.h
+gridtest.o: mem.o pos2D.o grid.o grid.h pos2D.h pos2D.h
+
+test-grid:
+	valgrind --leak-check=full --show-leak-kinds=all ./gridtest
 
 clean:
 	rm -rf *.dSYM
 	rm -rf  *.o
+	rm -rf gridtest
