Fixed mem leaks and did visibility testing

--- a/common/Makefile
+++ b/common/Makefile
@@ -27,18 +27,18 @@ visibilitytest: $(OBJS) visibilitytest.o
 	$(CC) $(CFLAGS) $^ $(LIBS) -lm -o $@
 
 grid.o: grid.h pos2D.h mem.h
-visibility.o: visibility.h pos2D.h grid.h
+visibility.o: visibility.h pos2D.h grid.h mem.h
 pos2D.o: pos2D.h
 mem.o: mem.h
 file.o: file.h
 gridtest.o: mem.o pos2D.o grid.o grid.h pos2D.h pos2D.h
-visibilitytest.o: pos2D.o grid.o grid.h pos2D.h file.h
+visibilitytest.o: pos2D.o grid.o grid.h pos2D.h file.h mem.h
 
 test-grid: gridtest
 	valgrind --leak-check=full --show-leak-kinds=all ./gridtest
 
 test-visibility: visibilitytest
-	./visibilitytest
+	valgrind --leak-check=full --show-leak-kinds=all ./visibilitytest
 
 clean:
 	rm -rf *.dSYM
