--- a/common/.gitignore
+++ b/common/.gitignore
@@ -36,4 +36,4 @@ Icon?
 
 ###########################################################################
 # custom additions below here; see also .gitignore files in subdirectories.
-tests
+gridtest
