--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ Icon?
 
 ###########################################################################
 # custom additions below here; see also .gitignore files in subdirectories.
+server
+maps/unreadable.txt
