finished map.c maptest.c (fully tested)

--- a/common/Makefile
+++ b/common/Makefile
@@ -15,7 +15,7 @@ MAKE = make
 
 .PHONY: all clean test
 
-all: $(LIB) gridtest visibilitytest
+all: $(LIB) gridtest visibilitytest maptest
 
 $(LIB): $(OBJS)
 	ar cr $(LIB) $(OBJS)
@@ -26,6 +26,9 @@ gridtest: $(OBJS) gridtest.o
 visibilitytest: $(OBJS) visibilitytest.o
 	$(CC) $(CFLAGS) $^ $(LIBS) -lm -o $@
 
+maptest: $(OBJS) maptest.o
+	$(CC) $(CFLAGS) $^ $(LIBS) -lm -o $@
+
 grid.o: grid.h pos2D.h mem.h
 visibility.o: visibility.h pos2D.h grid.h mem.h
 pos2D.o: pos2D.h
@@ -34,6 +37,7 @@ map.o: map.h file.h pos2D.h grid.h mem.h gameInfo.h
 file.o: file.h
 gridtest.o: mem.o pos2D.o grid.o grid.h pos2D.h
 visibilitytest.o: pos2D.o grid.o grid.h pos2D.h file.h mem.h
+maptest.o: mem.o map.h grid.h
 
 test-grid: gridtest
 	valgrind --leak-check=full --show-leak-kinds=all ./gridtest
@@ -41,8 +45,12 @@ test-grid: gridtest
 test-visibility: visibilitytest
 	valgrind --leak-check=full --show-leak-kinds=all ./visibilitytest
 
+test-map: maptest
+	valgrind --leak-check=full --show-leak-kinds=all ./maptest
+
 clean:
 	rm -rf *.dSYM
 	rm -rf  *.o
 	rm -rf gridtest
 	rm -rf visibilitytest
+	rm -rf maptest
