--- a/common/Makefile
+++ b/common/Makefile
@@ -6,7 +6,7 @@
 #
 
 S = ../support
-OBJS = grid.o pos2D.o mem.o visibility.o file.o gameInfo.o
+OBJS = grid.o pos2D.o mem.o visibility.o file.o gameInfo.o map.o
 
 LIB = common.a
 LLIBS = $S/support.a
@@ -17,21 +17,21 @@ MAKE = make
 
 .PHONY: all clean test
 
-all: $(LIB) gridtest visibilitytest maptest gameInfo
+all: $(LIB) gridtest visibilitytest maptest
 
 $(LIB): $(OBJS)
 	ar cr $(LIB) $(OBJS)
 
-gridtest: $(OBJS) gridtest.o
+gridtest: $(OBJS) $(LLIBS) gridtest.o
 	$(CC) $(CFLAGS) $^ $(LIBS) -lm -o $@
 
-visibilitytest: $(OBJS) visibilitytest.o
+visibilitytest: $(OBJS) $(LLIBS) visibilitytest.o
 	$(CC) $(CFLAGS) $^ $(LIBS) -lm -o $@
 	
 gameInfo: $(OBJS) $(LLIBS) gameInfo.o
 	$(CC) $(CFLAGS) $^ $(LIBS) -lm -o $@
 
-maptest: $(OBJS) maptest.o
+maptest: $(OBJS) $(LLIBS) maptest.o
 	$(CC) $(CFLAGS) $^ $(LIBS) -lm -o $@
 
 grid.o: grid.h pos2D.h mem.h
@@ -43,7 +43,7 @@ file.o: file.h
 gridtest.o: mem.o pos2D.o grid.o grid.h pos2D.h
 visibilitytest.o: pos2D.o grid.o grid.h pos2D.h file.h mem.h
 maptest.o: mem.o map.h grid.h
-gameInfo.o: mem.h pos2D.h grid.h $S/message.h visibility.h map.h
+gameInfo.o: gameInfo.h mem.h pos2D.h grid.h $S/message.h visibility.h map.h
 
 
 test-grid: gridtest
