--- a/common/.gitignore
+++ b/common/.gitignore
@@ -38,3 +38,6 @@ Icon?
 # custom additions below here; see also .gitignore files in subdirectories.
 gridtest
 maptest
+visibilitytest
+gameInfotest
+pos2Dtest
