usable gameInfo module with fixed files from previous merge

--- a/common/Makefile
+++ b/common/Makefile
@@ -9,7 +9,7 @@ S = ../support
 OBJS = grid.o pos2D.o mem.o visibility.o file.o gameInfo.o map.o
 
 LIB = common.a
-LLIBS = ../support.a
+LLIBS = $S/support.a
 
 CFLAGS = -Wall -pedantic -std=c11 -ggdb $(FLAGS) -I$S
 CC = gcc
@@ -27,9 +27,6 @@ gridtest: $(OBJS) $(LLIBS) gridtest.o
 
 visibilitytest: $(OBJS) $(LLIBS) visibilitytest.o
 	$(CC) $(CFLAGS) $^ $(LIBS) -lm -o $@
-	
-gameInfo: $(OBJS) $(LLIBS) gameInfo.o
-	$(CC) $(CFLAGS) $^ $(LIBS) -lm -o $@
 
 maptest: $(OBJS) $(LLIBS) maptest.o
 	$(CC) $(CFLAGS) $^ $(LIBS) -lm -o $@
@@ -46,14 +43,8 @@ file.o: file.h
 gridtest.o: mem.o pos2D.o grid.o grid.h pos2D.h
 visibilitytest.o: pos2D.o grid.o grid.h pos2D.h file.h mem.h
 maptest.o: mem.o map.h grid.h
-<<<<<<< HEAD
 gameInfo.o: gameInfo.h mem.h pos2D.h grid.h $S/message.h visibility.h map.h
-=======
 playerInfo.o:
-gameInfo.o: mem.h pos2D.h grid.h visibility.h playerInfo.h map.o
-gameInfoTest.o: pos2D.h grid.h playerInfo.h gameInfo.o map.o
->>>>>>> main
-
 
 test-grid: gridtest
 	valgrind --leak-check=full --show-leak-kinds=all ./gridtest
@@ -64,13 +55,8 @@ test-visibility: visibilitytest
 test-map: maptest
 	valgrind --leak-check=full --show-leak-kinds=all ./maptest
 
-<<<<<<< HEAD
 test-gameInfotest: gameInfotest
 	valgrind --leak-check=full --show-leak-kinds=all ./gameInfotest
-=======
-test-gameInfo: gameInfoTest
-	valgrind --leak-check=full --show-leak-kinds=all ./gameInfoTest
->>>>>>> main
 
 clean:
 	rm -rf *.dSYM
@@ -79,4 +65,5 @@ clean:
 	rm -rf visibilitytest
 	rm -rf maptest
 	rm -rf gameInfoTest
+	rm -rf pos2Dtest
 	rm -rf common.a
